# hurtrockmusic

./: LICENSE  README.md  barcode_utils.py  database.py  export_db.sh  hurtrock-music-store.service  hurtrock-service.py  main.py  migrate_courier_service.py  migrate_db.py  models.py  patch.py  products_backup.dump  pyproject.toml  requirements.txt  reset_database.py  sample_data.py  seo_tools.py  server.py  update_database_schema.py
chat_service/: add_media_fields_migration.py  manage.py  reset_and_test.py  reset_migrations.py  test_db.py  test_django_config.py  update_media_fields.py  verify_db.py
chat_service/chat/: authentication.py  consumers.py  health.py  models.py  permissions.py  routing.py  serializers.py  urls.py  views.py
chat_service/chat_microservice/: asgi.py  settings.py  urls.py  wsgi.py
config/: cert.pem  config.yml  ffadf8ea-331c-4e5c-bb34-69dc205d09a2.json
dokumentasi/: ADMIN_GUIDE.md  DEVELOPER_GUIDE.md  FLOWCHARTS-DIAGRAM.md  USER_GUIDE.md
static/css/: payment-config.css  style.css
static/js/: admin-chat.js  cashier-offline.js  floating-chat.js  payment-config.js  script.js
templates/: base.html  cart.html  checkout.html  error.html  floating_chat.html  index.html  login.html  orders.html  payment_success.html  product-feed.xml  product_detail.html  products.html  profile.html  register.html  return-policy.html  robots.txt  sitemap.xml  store_info.html
templates/admin/: add_product.html  add_user.html  analytics.html  base.html  categories.html  chat_analytics.html  chat_deleted_messages.html  chat_interface.html  dashboard.html  (+10 more)
(+5 files in other folders)
